--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-sudo: false
 language: node_js
+sudo: false
+
 node_js:
   - 0.10
   - 0.12
   - 4.0
   - 4.1
+  - 4
+  - 5
 
-
+after_script:
+  npm run coverage
